refactor(gc): clear remaining SonarCloud new-code smells
Non-blocking maintainability issues flagged on PR #29, now resolved so the
analysis reports zero new issues:

- AgentMetricsMapper.toMetrics: extract gcAvgPauseMs/gcAvgPauseText/
  gcLastCause helpers to bring Cognitive Complexity from 18 under 15 (S3776).
- GcDoctor.diagnose: extract liveSetFraction() and summarize() helpers to
  bring Cognitive Complexity from 16 under 15 (S3776).
- GcLlmPayloadBuilder: hoist the repeated " ms\n" literal into a MS_LINE
  constant (S1192).
- AgentServiceImpl.listAgents: Stream.collect(toList()) -> Stream.toList()
  and drop the now-unused Collectors.toList import (S6204).

No behavior change; build green, 89 tests pass.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>